@@ -24,8 +24,11 @@ import org.apache.camel.Exchange;
 import org.apache.camel.Processor;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
-import org.apache.camel.test.junit4.CamelTestSupport;
-import org.junit.Test;
+import org.apache.camel.test.junit5.CamelTestSupport;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class SqsExtendMessageVisibilityTest extends CamelTestSupport {
 
@@ -58,13 +61,13 @@ public class SqsExtendMessageVisibilityTest extends CamelTestSupport {
 
         assertMockEndpointsSatisfied(); // Wait for message to arrive.
 
-        assertTrue("Expected at least one changeMessageVisibility request.", this.client.changeMessageVisibilityRequests.size() >= 1);
+        assertTrue(this.client.changeMessageVisibilityRequests.size() >= 1,
+                "Expected at least one changeMessageVisibility request.");
         for (ChangeMessageVisibilityRequest req : this.client.changeMessageVisibilityRequests) {
             assertEquals("https://queue.amazonaws.com/541925086079/MyQueue", req.getQueueUrl());
             assertEquals(RECEIPT_HANDLE, req.getReceiptHandle());
-            Integer expectedTimeout = new Integer(6); // Should be 1.5 x TIMEOUT
-                                                      // as takes into account
-                                                      // the delay period
+            // Should be 1.5 x TIMEOUT as takes into account the delay period
+            Integer expectedTimeout = Integer.valueOf(6);
             assertEquals(expectedTimeout, req.getVisibilityTimeout());
         }
     }
@@ -74,7 +77,8 @@ public class SqsExtendMessageVisibilityTest extends CamelTestSupport {
         return new RouteBuilder() {
             @Override
             public void configure() throws Exception {
-                from("aws-sqs://MyQueue?amazonSQSClient=#amazonSQSClient&extendMessageVisibility=true&visibilityTimeout=" + TIMEOUT).to("mock:result");
+                from("aws-sqs://MyQueue?amazonSQSClient=#amazonSQSClient&extendMessageVisibility=true&visibilityTimeout="
+                     + TIMEOUT).to("mock:result");
             }
         };
     }
