@@ -52,8 +52,8 @@ public class Order {
 
     @GET
     @Path("products/{productId}/")
-    public Product getProduct(@PathParam("productId")int productId) {
-        Product p = products.get(new Long(productId));
+    public Product getProduct(@PathParam("productId") int productId) {
+        Product p = products.get(Long.valueOf(productId));
         return p;
     }
 
