@@ -26,16 +26,25 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import com.hazelcast.core.HazelcastInstance;
-import com.hazelcast.core.IMap;
-import com.hazelcast.query.SqlPredicate;
+import com.hazelcast.map.IMap;
+import com.hazelcast.query.impl.predicates.SqlPredicate;
 import org.apache.camel.CamelExecutionException;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.hazelcast.testutil.Dummy;
-import org.junit.After;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anySet;
+import static org.mockito.Mockito.atLeastOnce;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implements Serializable {
 
@@ -53,14 +62,15 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         verify(hazelcastInstance, atLeastOnce()).getMap("foo");
     }
 
-    @After
+    @AfterEach
     public void verifyMapMock() {
         verifyNoMoreInteractions(map);
     }
 
-    @Test(expected = CamelExecutionException.class)
+    @Test
     public void testWithInvalidOperation() {
-        template.sendBody("direct:putInvalid", "my-foo");
+        assertThrows(CamelExecutionException.class,
+                () -> template.sendBody("direct:putInvalid", "my-foo"));
     }
 
     @Test
@@ -85,12 +95,12 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
     public void testPutWithTTL() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
         headers.put(HazelcastConstants.OBJECT_ID, "4711");
-        headers.put(HazelcastConstants.TTL_VALUE, new Long(1));
+        headers.put(HazelcastConstants.TTL_VALUE, Long.valueOf(1));
         headers.put(HazelcastConstants.TTL_UNIT, TimeUnit.MINUTES);
         template.sendBodyAndHeaders("direct:put", "test", headers);
         verify(map).put("4711", "test", 1, TimeUnit.MINUTES);
     }
-    
+
     @Test
     public void testUpdate() {
         template.sendBodyAndHeader("direct:update", "my-fooo", HazelcastConstants.OBJECT_ID, "4711");
@@ -107,7 +117,7 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         verify(map).get("4711");
         assertEquals("my-foo", body);
     }
-    
+
     @Test
     public void testGetAllEmptySet() {
         Set<Object> l = new HashSet<>();
@@ -123,7 +133,7 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         assertTrue(body.contains("key2=value2"));
         assertTrue(body.contains("key3=value3"));
     }
-    
+
     @Test
     public void testGetAllOnlyOneKey() {
         Set<Object> l = new HashSet<>();
@@ -147,7 +157,8 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
     public void testQuery() {
         String sql = "bar > 1000";
 
-        when(map.values(any(SqlPredicate.class))).thenReturn(Arrays.<Object>asList(new Dummy("beta", 2000), new Dummy("gamma", 3000)));
+        when(map.values(any(SqlPredicate.class)))
+                .thenReturn(Arrays.<Object> asList(new Dummy("beta", 2000), new Dummy("gamma", 3000)));
         template.sendBodyAndHeader("direct:queue", null, HazelcastConstants.QUERY, sql);
         verify(map).values(any(SqlPredicate.class));
 
@@ -156,10 +167,11 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         assertNotNull(b1);
         assertEquals(2, b1.size());
     }
-    
+
     @Test
     public void testEmptyQuery() {
-        when(map.values()).thenReturn(Arrays.<Object>asList(new Dummy("beta", 2000), new Dummy("gamma", 3000), new Dummy("delta", 4000)));
+        when(map.values()).thenReturn(
+                Arrays.<Object> asList(new Dummy("beta", 2000), new Dummy("gamma", 3000), new Dummy("delta", 4000)));
         template.sendBody("direct:queue", null);
         verify(map).values();
 
@@ -168,7 +180,7 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         assertNotNull(b1);
         assertEquals(3, b1.size());
     }
-    
+
     @Test
     public void testUpdateOldValue() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
@@ -179,7 +191,7 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         verify(map).replace("4711", "my-foo", "replaced");
         verify(map).unlock("4711");
     }
-    
+
     @Test
     public void testPutIfAbsent() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
@@ -187,17 +199,17 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         template.sendBodyAndHeaders("direct:putIfAbsent", "replaced", headers);
         verify(map).putIfAbsent("4711", "replaced");
     }
-    
+
     @Test
     public void testPutIfAbsentWithTtl() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
         headers.put(HazelcastConstants.OBJECT_ID, "4711");
-        headers.put(HazelcastConstants.TTL_VALUE, new Long(1));
+        headers.put(HazelcastConstants.TTL_VALUE, Long.valueOf(1));
         headers.put(HazelcastConstants.TTL_UNIT, TimeUnit.MINUTES);
         template.sendBodyAndHeaders("direct:putIfAbsent", "replaced", headers);
-        verify(map).putIfAbsent("4711", "replaced", new Long(1), TimeUnit.MINUTES);
+        verify(map).putIfAbsent("4711", "replaced", Long.valueOf(1), TimeUnit.MINUTES);
     }
-    
+
     @Test
     public void testEvict() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
@@ -205,20 +217,20 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         template.sendBodyAndHeaders("direct:evict", "", headers);
         verify(map).evict("4711");
     }
-    
+
     @Test
     public void testEvictAll() throws InterruptedException {
         Map<String, Object> headers = new HashMap<>();
         template.sendBodyAndHeaders("direct:evictAll", "", headers);
         verify(map).evictAll();
     }
-    
+
     @Test
     public void testClear() throws InterruptedException {
         template.sendBody("direct:clear", "test");
         verify(map).clear();
     }
-    
+
     @Test
     public void testContainsKey() {
         when(map.containsKey("testOk")).thenReturn(true);
@@ -232,7 +244,7 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
         verify(map).containsKey("testKo");
         assertEquals(false, body);
     }
-    
+
     @Test
     public void testContainsValue() {
         when(map.containsValue("testOk")).thenReturn(true);
@@ -253,43 +265,55 @@ public class HazelcastMapProducerTest extends HazelcastCamelTestSupport implemen
             @Override
             public void configure() throws Exception {
 
-                from("direct:putInvalid").setHeader(HazelcastConstants.OPERATION, constant("bogus")).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                from("direct:putInvalid").setHeader(HazelcastConstants.OPERATION, constant("bogus"))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
-                from("direct:put").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.PUT)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                from("direct:put").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.PUT))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
                 from("direct:putIfAbsent").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.PUT_IF_ABSENT))
-                         .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
-                from("direct:update").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.UPDATE)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                from("direct:update").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.UPDATE))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
-                from("direct:get").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.GET)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
+                from("direct:get").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.GET))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:getAll").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.GET_ALL)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
+                from("direct:getAll").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.GET_ALL))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:delete").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.DELETE)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                from("direct:delete").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.DELETE))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
-                from("direct:queue").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.QUERY)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
+                from("direct:queue").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.QUERY))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:clear").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.CLEAR)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
+                from("direct:clear").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.CLEAR))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX));
 
-                from("direct:evict").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.EVICT)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
+                from("direct:evict").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.EVICT))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:evictAll").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.EVICT_ALL)).to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
+                from("direct:evictAll").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.EVICT_ALL))
+                        .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
                 from("direct:containsKey").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.CONTAINS_KEY))
                         .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:containsValue").setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.CONTAINS_VALUE))
+                from("direct:containsValue")
+                        .setHeader(HazelcastConstants.OPERATION, constant(HazelcastOperation.CONTAINS_VALUE))
                         .to(String.format("hazelcast-%sfoo", HazelcastConstants.MAP_PREFIX))
                         .to("seda:out");
 
-                from("direct:putWithOperationNumber").toF("hazelcast-%sfoo?operation=%s", HazelcastConstants.MAP_PREFIX, HazelcastOperation.PUT);
+                from("direct:putWithOperationNumber").toF("hazelcast-%sfoo?operation=%s", HazelcastConstants.MAP_PREFIX,
+                        HazelcastOperation.PUT);
                 from("direct:putWithOperationName").toF("hazelcast-%sfoo?operation=PUT", HazelcastConstants.MAP_PREFIX);
             }
         };
