@@ -23,19 +23,17 @@ import java.util.Properties;
 import org.apache.camel.support.jsse.KeyStoreParameters;
 import org.apache.camel.support.jsse.SSLContextParameters;
 import org.apache.camel.support.jsse.TrustManagersParameters;
-import org.apache.camel.test.junit4.CamelTestSupport;
+import org.apache.camel.test.junit5.CamelTestSupport;
 import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.common.config.SaslConfigs;
 import org.apache.kafka.common.config.SslConfigs;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 public class KafkaComponentTest extends CamelTestSupport {
-
-    @Override
-    public boolean isUseRouteBuilder() {
-        return false;
-    }
 
     @Test
     public void testPropertiesSet() throws Exception {
@@ -50,15 +48,52 @@ public class KafkaComponentTest extends CamelTestSupport {
     @Test
     public void testBrokersOnComponent() throws Exception {
         KafkaComponent kafka = context.getComponent("kafka", KafkaComponent.class);
-        kafka.setBrokers("broker1:12345,broker2:12566");
+        kafka.getConfiguration().setBrokers("broker1:12345,broker2:12566");
 
         String uri = "kafka:mytopic?partitioner=com.class.Party";
 
         KafkaEndpoint endpoint = context.getEndpoint(uri, KafkaEndpoint.class);
         assertEquals("broker1:12345,broker2:12566", endpoint.getConfiguration().getBrokers());
-        assertEquals("broker1:12345,broker2:12566", endpoint.getComponent().getBrokers());
+        assertEquals("broker1:12345,broker2:12566", endpoint.getComponent().getConfiguration().getBrokers());
         assertEquals("mytopic", endpoint.getConfiguration().getTopic());
         assertEquals("com.class.Party", endpoint.getConfiguration().getPartitioner());
+    }
+
+    @Test
+    public void testCreateAdditionalPropertiesOnEndpointAndComponent() {
+        final KafkaComponent kafkaComponent = context.getComponent("kafka", KafkaComponent.class);
+
+        // also we set the configs on the component level
+        final KafkaConfiguration kafkaConfiguration = new KafkaConfiguration();
+        final Map<String, Object> params = new HashMap<>();
+
+        params.put("extra.1", 789);
+        params.put("extra.3", "test.extra.3");
+        kafkaConfiguration.setAdditionalProperties(params);
+        kafkaComponent.setConfiguration(kafkaConfiguration);
+
+        final String uri
+                = "kafka:mytopic?brokers=broker1:12345,broker2:12566&partitioner=com.class.Party&additionalProperties.extra.1=123&additionalProperties.extra.2=test";
+
+        KafkaEndpoint endpoint = context.getEndpoint(uri, KafkaEndpoint.class);
+        assertEquals("broker1:12345,broker2:12566", endpoint.getConfiguration().getBrokers());
+        assertEquals("mytopic", endpoint.getConfiguration().getTopic());
+        assertEquals("com.class.Party", endpoint.getConfiguration().getPartitioner());
+        assertEquals("123", endpoint.getConfiguration().getAdditionalProperties().get("extra.1"));
+        assertEquals("test", endpoint.getConfiguration().getAdditionalProperties().get("extra.2"));
+        assertEquals("test.extra.3", endpoint.getConfiguration().getAdditionalProperties().get("extra.3"));
+
+        // test properties on producer keys
+        final Properties producerProperties = endpoint.getConfiguration().createProducerProperties();
+        assertEquals("123", producerProperties.getProperty("extra.1"));
+        assertEquals("test", producerProperties.getProperty("extra.2"));
+        assertEquals("test.extra.3", producerProperties.getProperty("extra.3"));
+
+        // test properties on consumer keys
+        final Properties consumerProperties = endpoint.getConfiguration().createConsumerProperties();
+        assertEquals("123", consumerProperties.getProperty("extra.1"));
+        assertEquals("test", consumerProperties.getProperty("extra.2"));
+        assertEquals("test.extra.3", producerProperties.getProperty("extra.3"));
     }
 
     @Test
@@ -72,29 +107,30 @@ public class KafkaComponentTest extends CamelTestSupport {
 
         assertEquals("mytopic", endpoint.getConfiguration().getTopic());
         assertEquals("1", endpoint.getConfiguration().getRequestRequiredAcks());
-        assertEquals(new Integer(1), endpoint.getConfiguration().getBufferMemorySize());
-        assertEquals(new Integer(10), endpoint.getConfiguration().getProducerBatchSize());
-        assertEquals(new Integer(12), endpoint.getConfiguration().getConnectionMaxIdleMs());
-        assertEquals(new Integer(1), endpoint.getConfiguration().getMaxBlockMs());
-        assertEquals(new Integer(1), endpoint.getConfiguration().getBufferMemorySize());
+        assertEquals(Integer.valueOf(1), endpoint.getConfiguration().getBufferMemorySize());
+        assertEquals(Integer.valueOf(10), endpoint.getConfiguration().getProducerBatchSize());
+        assertEquals(Integer.valueOf(12), endpoint.getConfiguration().getConnectionMaxIdleMs());
+        assertEquals(Integer.valueOf(1), endpoint.getConfiguration().getMaxBlockMs());
+        assertEquals(Integer.valueOf(1), endpoint.getConfiguration().getBufferMemorySize());
         assertEquals("testing", endpoint.getConfiguration().getClientId());
         assertEquals("none", endpoint.getConfiguration().getCompressionCodec());
-        assertEquals(new Integer(1), endpoint.getConfiguration().getLingerMs());
-        assertEquals(new Integer(100), endpoint.getConfiguration().getMaxRequestSize());
+        assertEquals(Integer.valueOf(1), endpoint.getConfiguration().getLingerMs());
+        assertEquals(Integer.valueOf(100), endpoint.getConfiguration().getMaxRequestSize());
         assertEquals(100, endpoint.getConfiguration().getRequestTimeoutMs().intValue());
-        assertEquals(new Integer(1029), endpoint.getConfiguration().getMetadataMaxAgeMs());
-        assertEquals(new Integer(23), endpoint.getConfiguration().getReceiveBufferBytes());
-        assertEquals(new Integer(234), endpoint.getConfiguration().getReconnectBackoffMs());
-        assertEquals(new Integer(234), endpoint.getConfiguration().getReconnectBackoffMaxMs());
-        assertEquals(new Integer(0), endpoint.getConfiguration().getRetries());
+        assertEquals(Integer.valueOf(1029), endpoint.getConfiguration().getMetadataMaxAgeMs());
+        assertEquals(Integer.valueOf(23), endpoint.getConfiguration().getReceiveBufferBytes());
+        assertEquals(Integer.valueOf(234), endpoint.getConfiguration().getReconnectBackoffMs());
+        assertEquals(Integer.valueOf(234), endpoint.getConfiguration().getReconnectBackoffMaxMs());
+        assertEquals(Integer.valueOf(0), endpoint.getConfiguration().getRetries());
         assertEquals(3782, endpoint.getConfiguration().getRetryBackoffMs().intValue());
         assertEquals(765, endpoint.getConfiguration().getSendBufferBytes().intValue());
-        assertEquals(new Integer(1), endpoint.getConfiguration().getMaxInFlightRequest());
-        assertEquals("org.apache.camel.reporters.TestReport,org.apache.camel.reporters.SampleReport", endpoint.getConfiguration().getMetricReporters());
-        assertEquals(new Integer(3), endpoint.getConfiguration().getNoOfMetricsSample());
-        assertEquals(new Integer(12344), endpoint.getConfiguration().getMetricsSampleWindowMs());
-        assertEquals(KafkaConstants.KAFKA_DEFAULT_SERIALIZER, endpoint.getConfiguration().getSerializerClass());
-        assertEquals(KafkaConstants.KAFKA_DEFAULT_SERIALIZER, endpoint.getConfiguration().getKeySerializerClass());
+        assertEquals(Integer.valueOf(1), endpoint.getConfiguration().getMaxInFlightRequest());
+        assertEquals("org.apache.camel.reporters.TestReport,org.apache.camel.reporters.SampleReport",
+                endpoint.getConfiguration().getMetricReporters());
+        assertEquals(Integer.valueOf(3), endpoint.getConfiguration().getNoOfMetricsSample());
+        assertEquals(Integer.valueOf(12344), endpoint.getConfiguration().getMetricsSampleWindowMs());
+        assertEquals(KafkaConstants.KAFKA_DEFAULT_SERIALIZER, endpoint.getConfiguration().getValueSerializer());
+        assertEquals(KafkaConstants.KAFKA_DEFAULT_SERIALIZER, endpoint.getConfiguration().getKeySerializer());
         assertEquals("testing", endpoint.getConfiguration().getSslKeyPassword());
         assertEquals("/abc", endpoint.getConfiguration().getSslKeystoreLocation());
         assertEquals("testing", endpoint.getConfiguration().getSslKeystorePassword());
@@ -108,9 +144,9 @@ public class KafkaComponentTest extends CamelTestSupport {
         assertEquals("test", endpoint.getConfiguration().getSslProvider());
         assertEquals("JKS", endpoint.getConfiguration().getSslTruststoreType());
         assertEquals("/usr/bin/kinit", endpoint.getConfiguration().getKerberosInitCmd());
-        assertEquals(new Integer(60000), endpoint.getConfiguration().getKerberosBeforeReloginMinTime());
-        assertEquals(new Double(0.05), endpoint.getConfiguration().getKerberosRenewJitter());
-        assertEquals(new Double(0.8), endpoint.getConfiguration().getKerberosRenewWindowFactor());
+        assertEquals(Integer.valueOf(60000), endpoint.getConfiguration().getKerberosBeforeReloginMinTime());
+        assertEquals(Double.valueOf(0.05), endpoint.getConfiguration().getKerberosRenewJitter());
+        assertEquals(Double.valueOf(0.8), endpoint.getConfiguration().getKerberosRenewWindowFactor());
         assertEquals("MAC", endpoint.getConfiguration().getSslCipherSuites());
         assertEquals("test", endpoint.getConfiguration().getSslEndpointAlgorithm());
         assertEquals("SunX509", endpoint.getConfiguration().getSslKeymanagerAlgorithm());
@@ -165,6 +201,7 @@ public class KafkaComponentTest extends CamelTestSupport {
         props.put(SaslConfigs.SASL_MECHANISM, "PLAIN");
         props.put(SslConfigs.SSL_KEYMANAGER_ALGORITHM_CONFIG, "SunX509");
         props.put(SslConfigs.SSL_TRUSTMANAGER_ALGORITHM_CONFIG, "PKIX");
+        props.put(SslConfigs.SSL_ENDPOINT_IDENTIFICATION_ALGORITHM_CONFIG, "https");
 
         return props;
     }
@@ -218,10 +255,10 @@ public class KafkaComponentTest extends CamelTestSupport {
     public void testCreateProducerConfigTruststorePassword() throws Exception {
         KeyStoreParameters keyStoreParameters = new KeyStoreParameters();
         keyStoreParameters.setPassword("my-password");
-    
+
         TrustManagersParameters trustManagersParameters = new TrustManagersParameters();
         trustManagersParameters.setKeyStore(keyStoreParameters);
-    
+
         SSLContextParameters sslContextParameters = new SSLContextParameters();
         sslContextParameters.setTrustManagers(trustManagersParameters);
 
@@ -229,7 +266,7 @@ public class KafkaComponentTest extends CamelTestSupport {
         kcfg.setSslContextParameters(sslContextParameters);
 
         Properties props = kcfg.createProducerProperties();
-    
+
         assertEquals("my-password", props.getProperty("ssl.truststore.password"));
         assertNull(props.getProperty("ssl.keystore.password"));
     }
@@ -238,10 +275,10 @@ public class KafkaComponentTest extends CamelTestSupport {
     public void testCreateConsumerConfigTruststorePassword() throws Exception {
         KeyStoreParameters keyStoreParameters = new KeyStoreParameters();
         keyStoreParameters.setPassword("my-password");
-    
+
         TrustManagersParameters trustManagersParameters = new TrustManagersParameters();
         trustManagersParameters.setKeyStore(keyStoreParameters);
-    
+
         SSLContextParameters sslContextParameters = new SSLContextParameters();
         sslContextParameters.setTrustManagers(trustManagersParameters);
 
@@ -249,7 +286,7 @@ public class KafkaComponentTest extends CamelTestSupport {
         kcfg.setSslContextParameters(sslContextParameters);
 
         Properties props = kcfg.createConsumerProperties();
-    
+
         assertEquals("my-password", props.getProperty("ssl.truststore.password"));
         assertNull(props.getProperty("ssl.keystore.password"));
     }
