@@ -27,11 +27,11 @@ import org.jsmpp.bean.TypeOfNumber;
 import org.jsmpp.extra.SessionState;
 import org.jsmpp.session.Session;
 import org.jsmpp.session.SessionStateListener;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 /**
  * JUnit test class for <code>org.apache.camel.component.smpp.SmppConfiguration</code>
@@ -40,7 +40,7 @@ public class SmppConfigurationTest {
 
     private SmppConfiguration configuration;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         configuration = new SmppConfiguration();
         configuration.setServiceType("CMT");
@@ -52,10 +52,10 @@ public class SmppConfigurationTest {
         assertEquals(0x00, configuration.getDestAddrNpi());
         assertEquals(0x00, configuration.getDestAddrTon());
         assertEquals("", configuration.getAddressRange());
-        assertEquals(new Integer(5000), configuration.getEnquireLinkTimer());
+        assertEquals(Integer.valueOf(5000), configuration.getEnquireLinkTimer());
         assertEquals("localhost", configuration.getHost());
         assertEquals(null, configuration.getPassword());
-        assertEquals(new Integer(2775), configuration.getPort());
+        assertEquals(Integer.valueOf(2775), configuration.getPort());
         assertEquals(0x01, configuration.getPriorityFlag());
         assertEquals(0x00, configuration.getProtocolId());
         assertEquals(0x01, configuration.getRegisteredDelivery());
@@ -66,7 +66,7 @@ public class SmppConfigurationTest {
         assertEquals(0x00, configuration.getSourceAddrTon());
         assertEquals("smppclient", configuration.getSystemId());
         assertEquals("", configuration.getSystemType());
-        assertEquals(new Integer(10000), configuration.getTransactionTimer());
+        assertEquals(Integer.valueOf(10000), configuration.getTransactionTimer());
         assertEquals("ISO-8859-1", configuration.getEncoding());
         assertEquals(0x00, configuration.getNumberingPlanIndicator());
         assertEquals(0x00, configuration.getTypeOfNumber());
@@ -74,7 +74,7 @@ public class SmppConfigurationTest {
         assertEquals(5000, configuration.getInitialReconnectDelay());
         assertEquals(5000, configuration.getReconnectDelay());
         assertEquals(null, configuration.getHttpProxyHost());
-        assertEquals(new Integer(3128), configuration.getHttpProxyPort());
+        assertEquals(Integer.valueOf(3128), configuration.getHttpProxyPort());
         assertEquals(null, configuration.getHttpProxyUsername());
         assertEquals(null, configuration.getHttpProxyPassword());
         assertEquals(null, configuration.getSessionStateListener());
@@ -87,10 +87,10 @@ public class SmppConfigurationTest {
         assertEquals("1919", configuration.getDestAddr());
         assertEquals(0x08, configuration.getDestAddrNpi());
         assertEquals(0x02, configuration.getDestAddrTon());
-        assertEquals(new Integer(5001), configuration.getEnquireLinkTimer());
+        assertEquals(Integer.valueOf(5001), configuration.getEnquireLinkTimer());
         assertEquals("127.0.0.1", configuration.getHost());
         assertEquals("secret", configuration.getPassword());
-        assertEquals(new Integer(2776), configuration.getPort());
+        assertEquals(Integer.valueOf(2776), configuration.getPort());
         assertEquals(0x00, configuration.getPriorityFlag());
         assertEquals(0x01, configuration.getProtocolId());
         assertEquals(0x00, configuration.getRegisteredDelivery());
@@ -101,7 +101,7 @@ public class SmppConfigurationTest {
         assertEquals(0x02, configuration.getSourceAddrTon());
         assertEquals("client", configuration.getSystemId());
         assertEquals("xx", configuration.getSystemType());
-        assertEquals(new Integer(10001), configuration.getTransactionTimer());
+        assertEquals(Integer.valueOf(10001), configuration.getTransactionTimer());
         assertEquals("UTF-8", configuration.getEncoding());
         assertEquals(0x08, configuration.getNumberingPlanIndicator());
         assertEquals(0x02, configuration.getTypeOfNumber());
@@ -109,7 +109,7 @@ public class SmppConfigurationTest {
         assertEquals(5001, configuration.getInitialReconnectDelay());
         assertEquals(5002, configuration.getReconnectDelay());
         assertEquals("127.0.0.1", configuration.getHttpProxyHost());
-        assertEquals(new Integer(3129), configuration.getHttpProxyPort());
+        assertEquals(Integer.valueOf(3129), configuration.getHttpProxyPort());
         assertEquals("user", configuration.getHttpProxyUsername());
         assertEquals("secret", configuration.getHttpProxyPassword());
         assertNotNull(configuration.getSessionStateListener());
@@ -121,7 +121,7 @@ public class SmppConfigurationTest {
         configuration.configureFromURI(new URI("smpp://client@127.0.0.1:2776"));
 
         assertEquals("127.0.0.1", configuration.getHost());
-        assertEquals(new Integer(2776), configuration.getPort());
+        assertEquals(Integer.valueOf(2776), configuration.getPort());
         assertEquals("client", configuration.getSystemId());
     }
 
@@ -134,7 +134,7 @@ public class SmppConfigurationTest {
         configuration.configureFromURI(new URI("smpp://?password=pw"));
 
         assertEquals("host", configuration.getHost());
-        assertEquals(new Integer(123), configuration.getPort());
+        assertEquals(Integer.valueOf(123), configuration.getPort());
         assertEquals("systemId", configuration.getSystemId());
     }
 
@@ -178,41 +178,41 @@ public class SmppConfigurationTest {
     @Test
     public void toStringShouldListAllInstanceVariables() {
         String expected = "SmppConfiguration["
-                + "usingSSL=false, "
-                + "enquireLinkTimer=5000, "
-                + "host=localhost, "
-                + "password=null, "
-                + "port=2775, "
-                + "systemId=smppclient, "
-                + "systemType=, "
-                + "dataCoding=0, "
-                + "alphabet=0, "
-                + "encoding=ISO-8859-1, "
-                + "transactionTimer=10000, "
-                + "registeredDelivery=1, "
-                + "serviceType=CMT, "
-                + "sourceAddrTon=0, "
-                + "destAddrTon=0, "
-                + "sourceAddrNpi=0, "
-                + "destAddrNpi=0, "
-                + "addressRange=, "
-                + "protocolId=0, "
-                + "priorityFlag=1, "
-                + "replaceIfPresentFlag=0, "
-                + "sourceAddr=1616, "
-                + "destAddr=1717, "
-                + "typeOfNumber=0, "
-                + "numberingPlanIndicator=0, "
-                + "initialReconnectDelay=5000, "
-                + "reconnectDelay=5000, "
-                + "maxReconnect=2147483647, "
-                + "lazySessionCreation=false, "
-                + "httpProxyHost=null, "
-                + "httpProxyPort=3128, "
-                + "httpProxyUsername=null, "
-                + "httpProxyPassword=null, "
-                + "splittingPolicy=ALLOW, "
-                + "proxyHeaders=null]";
+                          + "usingSSL=false, "
+                          + "enquireLinkTimer=5000, "
+                          + "host=localhost, "
+                          + "password=null, "
+                          + "port=2775, "
+                          + "systemId=smppclient, "
+                          + "systemType=, "
+                          + "dataCoding=0, "
+                          + "alphabet=0, "
+                          + "encoding=ISO-8859-1, "
+                          + "transactionTimer=10000, "
+                          + "registeredDelivery=1, "
+                          + "serviceType=CMT, "
+                          + "sourceAddrTon=0, "
+                          + "destAddrTon=0, "
+                          + "sourceAddrNpi=0, "
+                          + "destAddrNpi=0, "
+                          + "addressRange=, "
+                          + "protocolId=0, "
+                          + "priorityFlag=1, "
+                          + "replaceIfPresentFlag=0, "
+                          + "sourceAddr=1616, "
+                          + "destAddr=1717, "
+                          + "typeOfNumber=0, "
+                          + "numberingPlanIndicator=0, "
+                          + "initialReconnectDelay=5000, "
+                          + "reconnectDelay=5000, "
+                          + "maxReconnect=2147483647, "
+                          + "lazySessionCreation=false, "
+                          + "httpProxyHost=null, "
+                          + "httpProxyPort=3128, "
+                          + "httpProxyUsername=null, "
+                          + "httpProxyPassword=null, "
+                          + "splittingPolicy=ALLOW, "
+                          + "proxyHeaders=null]";
 
         assertEquals(expected, configuration.toString());
     }
@@ -221,10 +221,10 @@ public class SmppConfigurationTest {
         config.setDestAddr("1919");
         config.setDestAddrNpi(NumberingPlanIndicator.NATIONAL.value());
         config.setDestAddrTon(TypeOfNumber.NATIONAL.value());
-        config.setEnquireLinkTimer(new Integer(5001));
+        config.setEnquireLinkTimer(Integer.valueOf(5001));
         config.setHost("127.0.0.1");
         config.setPassword("secret");
-        config.setPort(new Integer(2776));
+        config.setPort(Integer.valueOf(2776));
         config.setPriorityFlag((byte) 0);
         config.setProtocolId((byte) 1);
         config.setRegisteredDelivery(SMSCDeliveryReceipt.DEFAULT.value());
@@ -235,7 +235,7 @@ public class SmppConfigurationTest {
         config.setSourceAddrTon(TypeOfNumber.NATIONAL.value());
         config.setSystemId("client");
         config.setSystemType("xx");
-        config.setTransactionTimer(new Integer(10001));
+        config.setTransactionTimer(Integer.valueOf(10001));
         config.setEncoding("UTF-8");
         config.setNumberingPlanIndicator(NumberingPlanIndicator.NATIONAL.value());
         config.setTypeOfNumber(TypeOfNumber.NATIONAL.value());
@@ -243,7 +243,7 @@ public class SmppConfigurationTest {
         config.setInitialReconnectDelay(5001);
         config.setReconnectDelay(5002);
         config.setHttpProxyHost("127.0.0.1");
-        config.setHttpProxyPort(new Integer(3129));
+        config.setHttpProxyPort(Integer.valueOf(3129));
         config.setHttpProxyUsername("user");
         config.setHttpProxyPassword("secret");
         config.setSessionStateListener(new SessionStateListener() {
