@@ -24,18 +24,22 @@ import org.apache.camel.component.thrift.generated.Calculator;
 import org.apache.camel.component.thrift.generated.Operation;
 import org.apache.camel.component.thrift.generated.Work;
 import org.apache.camel.test.AvailablePortFinder;
-import org.apache.camel.test.junit4.CamelTestSupport;
+import org.apache.camel.test.junit5.CamelTestSupport;
 import org.apache.thrift.protocol.TBinaryProtocol;
 import org.apache.thrift.protocol.TProtocol;
 import org.apache.thrift.transport.TSocket;
 import org.apache.thrift.transport.TTransport;
 import org.apache.thrift.transport.TTransportException;
 import org.apache.thrift.transport.TZlibTransport;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ThriftConsumerZlibCompressionTest extends CamelTestSupport {
     private static final Logger LOG = LoggerFactory.getLogger(ThriftConsumerZlibCompressionTest.class);
@@ -43,17 +47,17 @@ public class ThriftConsumerZlibCompressionTest extends CamelTestSupport {
     private static final int THRIFT_TEST_NUM1 = 12;
     private static final int THRIFT_TEST_NUM2 = 13;
     private static final int THRIFT_CLIENT_TIMEOUT = 2000;
-    
+
     private static Calculator.Client thriftClient;
-    
+
     private TProtocol protocol;
     private TTransport transport;
-    
-    @Before
+
+    @BeforeEach
     public void startThriftZlibClient() throws IOException, TTransportException {
         if (transport == null) {
             LOG.info("Connecting to the Thrift server with zlib compression on port: {}", THRIFT_TEST_PORT);
-            
+
             transport = new TSocket("localhost", THRIFT_TEST_PORT, THRIFT_CLIENT_TIMEOUT);
             protocol = new TBinaryProtocol(new TZlibTransport(transport));
             thriftClient = new Calculator.Client(protocol);
@@ -62,7 +66,7 @@ public class ThriftConsumerZlibCompressionTest extends CamelTestSupport {
         }
     }
 
-    @After
+    @AfterEach
     public void stopThriftClient() throws Exception {
         if (transport != null) {
             transport.close();
@@ -70,29 +74,29 @@ public class ThriftConsumerZlibCompressionTest extends CamelTestSupport {
             LOG.info("Connection to the Thrift server closed");
         }
     }
-    
+
     @Test
     public void testCalculateMethodInvocation() throws Exception {
         LOG.info("Test Calculate method invocation");
-        
+
         Work work = new Work(THRIFT_TEST_NUM1, THRIFT_TEST_NUM2, Operation.MULTIPLY);
-        
+
         int calculateResult = thriftClient.calculate(1, work);
-        
+
         MockEndpoint mockEndpoint = getMockEndpoint("mock:thrift-secure-service");
         mockEndpoint.expectedMessageCount(1);
         mockEndpoint.expectedHeaderValuesReceivedInAnyOrder(ThriftConstants.THRIFT_METHOD_NAME_HEADER, "calculate");
         mockEndpoint.assertIsSatisfied();
-        
+
         assertEquals(THRIFT_TEST_NUM1 * THRIFT_TEST_NUM2, calculateResult);
     }
-    
+
     @Test
     public void testEchoMethodInvocation() throws Exception {
         LOG.info("Test Echo method invocation");
-        
+
         Work echoResult = thriftClient.echo(new Work(THRIFT_TEST_NUM1, THRIFT_TEST_NUM2, Operation.MULTIPLY));
-        
+
         MockEndpoint mockEndpoint = getMockEndpoint("mock:thrift-secure-service");
         mockEndpoint.expectedMessageCount(1);
         mockEndpoint.expectedHeaderValuesReceivedInAnyOrder(ThriftConstants.THRIFT_METHOD_NAME_HEADER, "echo");
@@ -103,21 +107,24 @@ public class ThriftConsumerZlibCompressionTest extends CamelTestSupport {
         assertEquals(THRIFT_TEST_NUM1, echoResult.num1);
         assertEquals(Operation.MULTIPLY, echoResult.op);
     }
-    
+
     @Override
     protected RouteBuilder createRouteBuilder() throws Exception {
         return new RouteBuilder() {
             @Override
             public void configure() {
-                
-                from("thrift://localhost:" + THRIFT_TEST_PORT + "/org.apache.camel.component.thrift.generated.Calculator?compressionType=ZLIB&synchronous=true")
-                    .to("mock:thrift-secure-service").choice()
-                        .when(header(ThriftConstants.THRIFT_METHOD_NAME_HEADER).isEqualTo("calculate")).setBody(simple(new Integer(THRIFT_TEST_NUM1 * THRIFT_TEST_NUM2).toString()))
-                        .when(header(ThriftConstants.THRIFT_METHOD_NAME_HEADER).isEqualTo("echo")).setBody(simple("${body[0]}")).bean(new CalculatorMessageBuilder(), "echo");
+
+                from("thrift://localhost:" + THRIFT_TEST_PORT
+                     + "/org.apache.camel.component.thrift.generated.Calculator?compressionType=ZLIB&synchronous=true")
+                             .to("mock:thrift-secure-service").choice()
+                             .when(header(ThriftConstants.THRIFT_METHOD_NAME_HEADER).isEqualTo("calculate"))
+                             .setBody(simple(Integer.valueOf(THRIFT_TEST_NUM1 * THRIFT_TEST_NUM2).toString()))
+                             .when(header(ThriftConstants.THRIFT_METHOD_NAME_HEADER).isEqualTo("echo"))
+                             .setBody(simple("${body[0]}")).bean(new CalculatorMessageBuilder(), "echo");
             }
         };
     }
-    
+
     public class CalculatorMessageBuilder {
         public Work echo(Work work) {
             return work.deepCopy();
